// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles Composable > useCodeTagStyles > should return the code tag style defaults 1`] = `
{
  "padding": "1em",
  "width": "100%",
}
`;

exports[`Styles Composable > useCodeTagStyles > should return the code tag style defaults if loading 1`] = `
{
  "padding": "1em",
  "width": "",
}
`;

exports[`Styles Composable > useHeaderStyles > should return gap as undefined 1`] = `
{
  "bottom": "0",
  "gap": "0px",
}
`;

exports[`Styles Composable > useHeaderStyles > should return tabGap as 0px 1`] = `
{
  "bottom": "0",
  "gap": "0px",
}
`;

exports[`Styles Composable > useHeaderStyles > should return tabGap as 0px 2`] = `
{
  "bottom": "0",
  "gap": "0px",
}
`;

exports[`Styles Composable > useHeaderStyles > should return the header style defaults 1`] = `
{
  "bottom": "1px",
  "gap": "0.25rem",
}
`;

exports[`Styles Composable > useHeaderStyles > should return the header style with floatingTabs as false 1`] = `
{
  "bottom": "0",
  "gap": "0.25rem",
}
`;

exports[`Styles Composable > usePreTagStyles > should return the pre tag style defaults 1`] = `
{
  "borderRadius": "0.5rem",
  "display": "flex",
  "height": "auto",
  "maxHeight": "auto",
  "overflow": "auto",
}
`;

exports[`Styles Composable > usePreTagStyles > should return the set radius if no tabs 1`] = `
{
  "borderRadius": "0.5rem",
  "display": "flex",
  "height": "auto",
  "maxHeight": "auto",
  "overflow": "auto",
}
`;

exports[`Styles Composable > usePreTagStyles > should return the set radius with tabs 1`] = `
{
  "borderRadius": "0.5rem 0 0.5rem 0.5rem !important",
  "display": "flex",
  "height": "auto",
  "maxHeight": "auto",
  "overflow": "auto",
}
`;

exports[`Styles Composable > useTabGroupStyles > should return tabGap as 0px 1`] = `
{
  "gap": "0px",
}
`;

exports[`Styles Composable > useTabGroupStyles > should return tabGap as 0px 2`] = `
{
  "gap": "0px",
}
`;

exports[`Styles Composable > useTabGroupStyles > should return the tab group style defaults 1`] = `
{
  "gap": "0.25rem",
}
`;
